--- a/_posts/chef-capybara/2021-06-20-story.md
+++ b/_posts/chef-capybara/2021-06-20-story.md
@@ -6,7 +6,7 @@ tags: [blog,chef capybara, story]
 description: TODO
 ---
 
-![Chef Capybara](/assets/img/chef-capybara/header.jpg)
+![Chef Capybara](/assets/img/chef-capybara/header.png)
 
 
 # Environment
